[package]
name = "satellite"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.17.0"
serde = "1.0.190"
junobuild-satellite = { version = "0.0.21", default-features = false, features = ["on_set_doc", "on_set_many_docs", "on_delete_doc", "on_upload_asset"] }
junobuild-macros = "0.0.3"
junobuild-utils = "0.0.4"

