[package]
name = "satellite"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.20"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
serde = "1.0.225"
serde_json = "1.0.149"
junobuild-satellite = { version = "0.6.0", default-features = false, features = ["on_set_doc"] }
junobuild-macros = "0.4.0"
junobuild-utils = "0.4.0"

