[package]
name = "satellite"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.2"
ic-cdk = "0.17.0"
serde = "1.0.190"
junobuild-satellite = { version = "= 0.2.0", default-features = false, features = ["on_set_doc"] }
junobuild-macros = "0.1.0"
junobuild-utils = "0.1.0"
junobuild-shared = "0.2.0"
junobuild-storage = "0.2.0"

